# rbc-keywords

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: key_words.txt
src/rbc_keywords/: cli.py  counter.py  io_excel.py  morph.py
